--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 trigger: none
 
 pool: 
-  vmImage: 'ubuntu-latest'
-  # name: SelfHostedPool
+  #vmImage: 'ubuntu-latest'
+  name: SelfHostedPool
 
 variables: 
   - group: "Terraform Variables"
